--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "docker:build": "docker build -t etekaaf .",
-    "docker:run": "docker run -p 3000:3000 etekaaf",
-    "docker:compose": "docker-compose up -d",
-    "docker:compose-down": "docker-compose down",
-    "deploy:setup": "chmod +x deploy.sh && ./deploy.sh",
-    "deploy:update": "./update.sh"
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
